<resources>
    <string name="app_name">GrocerEase</string>
    <string name="home">Beranda</string>
    <string name="profile">Profil</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bottom_navigation">Bottom Navigation</string>
    <string name="totalExpenses">Total Pengeluaran Terkini</string>
    <string name="totalItems">Total Barang Terkini</string>
    <string name="recent">Baru Ditambahkan</string>
    <string name="content_image">Image View</string>
    <string name="fab_description">Floating Action Button Add.</string>
    <string name="save_list">Simpan Daftar</string>
    <string name="expenses">Pengeluaran</string>
    <string name="fab_scan">Pindai Struk</string>
    <string name="fab_add_manual">Tambah Manual</string>
    <string name="create_plan">Tambah Rencana</string>
    <string name="create_expense">Tambah Pengeluaran</string>
    <string name="input_title_list">Judul</string>
    <string name="fab_bottom_app_bar">Add list option</string>
    <string name="item_name">Dorayaki</string>
    <string name="category">Makanan</string>
    <string name="quantity">"Jumlah : "</string>
    <string name="quantity_value">2 Items</string>
    <string name="price">"Harga : "</string>
    <string name="price_value">Rp30.000,00</string>
    <string name="delete_button">Tombol Hapus</string>
    <string name="empty_image">Silakan pilih atau ambil gambar</string>
    <string name="failed_take_picture">Gagal mengambil gambar</string>
    <string name="failed_show_camera_preview">Gagal membuka kamera</string>
    <string name="imageView">ImageView</string>
    <string name="cameraSwitch">Switch camera</string>
    <string name="permission_request_granted">Akses di Izinkan</string>
    <string name="permission_request_denied">Permission request denied</string>
    <string name="app_settings">Pengaturan Aplikasi</string>
    <string name="acc_settings">Pengaturan Akun</string>
    <string name="plans">Rencana Belanja</string>
    <string name="theme">Tema Aplikasi</string>
    <string name="select_language">App Language</string>
    <string name="save">Simpan</string>
    <string name="scan_result">Hasil Scan</string>
    <string name="next">Selanjutnya</string>
    <string name="detail_list">Detail Daftar</string>
    <string name="create_new_list">Buat daftar baru?</string>
    <string name="items_will_be_removed">Semua daftar dan gambar Anda saat ini akan dihapus.</string>
    <string name="cancel">Batal</string>
    <string name="proceed">Lanjutkan</string>
    <string name="crop_receipt">Potong Struk</string>
    <string name="today">Hari ini</string>
    <string name="edit_list">Edit Daftar</string>
    <string name="save_changes">Simpan Perubahan</string>
    <string name="retry">Coba Lagi</string>
    <string name="edit_button">Tombol Edit</string>
    <string name="account_settings">Pengaturan Akun</string>
    <string name="reset_password">Reset Kata Sandi</string>
    <string name="reset">Reset</string>
    <string name="share_list">Daftar Bersama</string>
    <string name="delete_list">Hapus daftar ini?</string>
    <string name="list_will_be_removed">Daftar ini dan semua itemnya akan dihapus..</string>
    <string name="notification">Pemberitahuan</string>
    <string name="name_cannot_blank">Nama produk tidak boleh kosong</string>
    <string name="price_cannot_blank">Harga tidak boleh kosong</string>
    <string name="quantity_cannot_blank">Jumlah tidak boleh kosong</string>
    <string name="category_cannot_blank">Kategori tidak boleh kosong</string>
    <string name="insert_your_email">Masukkan email Anda</string>
    <string name="insert_your_password">Masukkan Kata Sandi Anda</string>
    <string name="confirm_your_password">Konfirmasikan Kata Sandi Anda</string>
    <string name="register">Daftar</string>
    <string name="insert_your_username">Masukkan Username Anda</string>
    <string name="login">Login</string>
    <string name="insert_email_and_password">Silakan masukkan email dan kata sandi Anda untuk Masuk ke akun Anda!</string>
    <string name="sign_up_here">Belum punya akun? Daftar di sini!</string>
    <string name="items"> Item</string>
    <string name="data_from_the_last">Data dari 4 minggu terakhir</string>
    <string name="username">Nama pengguna</string>
    <string name="email">Email</string>
    <string name="monthly_expense">Biaya Bulanan</string>
    <string name="total_expense">Total Pengeluaran</string>
    <string name="total_items">Total Item</string>
    <string name="name">Nama</string>
    <string name="price_add">Harga</string>
    <string name="quantity_add">Jumlah</string>
    <string name="category_add">Kategori</string>
    <string name="total">Total</string>
    <string name="add">Tambah</string>
    <string name="crop_first">Potong terlebih dahulu</string>
    <string name="crop_and_transform">Potong Struk</string>
    <string name="new_password">Kata Sandi Baru</string>
    <string name="repeat_new_password">Konfirmasi Kata Sandi</string>
    <string name="old_password">Kata Sandi Lama</string>
    <string name="landing_intro">Mulailah perjalanan pelacakan dan perencanaan Anda</string>
    <string name="intro_1">Jadikan pengalaman berbelanja Anda lebih menyenangkan!</string>
    <string name="intro_2">Pantau pengeluaran Anda!</string>
    <string name="intro_3">Perhatikan pengeluaranmu dengan bijak!</string>
    <string name="github">Our Team. (GitHub)</string>

</resources>