<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_plan"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.PlanFragment">

    <TextView
        android:id="@+id/planTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/plans"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/icCalender"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:contentDescription="@string/content_image"
        app:tint="@color/iconButton"
        android:src="@drawable/ic_calendar"
        app:layout_constraintBottom_toBottomOf="@+id/planTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/planTxt"
        />

    <TextView
        android:id="@+id/resetBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:paddingStart="8dp"
        android:paddingTop="4dp"
        android:paddingEnd="8dp"
        android:paddingBottom="4dp"
        android:text="@string/reset"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@drawable/rounded_corner_background"
        android:backgroundTint="@color/deleteBtn"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/icCalender"
        app:layout_constraintEnd_toStartOf="@+id/icCalender"
        app:layout_constraintTop_toTopOf="@+id/icCalender" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPlan"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:clipToPadding="false"
        android:paddingBottom="160dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/planTxt"
        tools:layout_editor_absoluteX="16dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="100dp"
        android:contentDescription="@string/fab_description"
        app:srcCompat="@drawable/ic_add"
        app:tint="@color/colorSurfaceDark"
        app:backgroundTint="@color/BlueLight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>